network/eip.tf
# resource "aws_eip" "iti" {
#   vpc      = true
#   tags = {
#     Name = "iti_ip"
#   }
# }
